fixed spacing and responsive styles

--- a/src/routes/styles.css
+++ b/src/routes/styles.css
@@ -10,6 +10,7 @@ body {
     background-color: var(--color-bg-0);
     background-attachment: fixed;
     font-family: 'Opti-Goudy', sans-serif;
+    margin: 0;
 }
 
 h1 {
@@ -42,88 +43,6 @@ h3 {
 .button-text {
 	text-align: center;
 	color: var(light-color);
-}
-
-.hero {
-    display: flex;
-    align-items: top;
-    margin: 0 auto;
-}
-
-.hero-header {
-    width: 100%;
-    overflow: auto;
-    align-items: first baseline;
-}
-
-.hero-title {
-    font-family: 'Moontime', sans-serif;
-    font-size: 4rem;
-}
-
-.hero-subtitle {
-    font-family: 'Opti-Goudy', sans-serif;
-    font-size: 40px;
-    padding-left: 16px;
-}
-
-.hero-img {
-    width: 50%;
-    align-items: top;
-}
-
-.hero-img img {
-    width: 400px;
-    height: 315px;
-    object-fit: contain;
-}
-
-.hero-img .button {
-    position: absolute;
-  top: 40%;
-  left: 70%;
-  width: 140px;
-  border-radius: 4px;
-    padding: 8px 8px;
-    text-align: center;
-    text-decoration: none;
-    font-family: sans-serif;
-    font-size: 16px;
-	background-color: var(--dark-color);
-    opacity: 0.7;
-	color: var(--light-color);
-  /* transform: translate(-50%, -50%);
-  -ms-transform: translate(-50%, -50%);*/ 
-}
-
-.hero-img .button:hover {
-    opacity: 1;
-}
-
-.details {
-    width: 100%;
-    background-color: var(--color-bg-1);
-    display: inline-block;
-    margin: 0 auto;
-}
-
-.details-trio {
-    display: flex;
-    justify-content: center;
-    gap: 20px;
-    width: 100%;
-    margin: 0 auto;
-    padding: 40px 0px;
-}
-
-.details-item {
-    width: 200px;
-}
-
-.details-item img {
-    width: 150px;
-    height: 120px;
-    object-fit: contain;
 }
 
 
